--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -4705,3 +4705,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-idea-rhel8
+  tag: 3.11-5
+  taskId: 57067201
+  timeCreate: Mon Nov 20 04:54:05 2023
+  timeStart: Mon Nov 20 04:54:33 2023
+  timeFinish: Mon Nov 20 05:10:14 2023
+  timeWait: 0 mins
+  timeBuild: 15 mins
+  timeTotal: 16 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-77
+  taskId: 57067970
+  timeCreate: Mon Nov 20 05:37:08 2023
+  timeStart: Mon Nov 20 05:38:08 2023
+  timeFinish: Mon Nov 20 05:43:34 2023
+  timeWait: 1 mins
+  timeBuild: 5 mins
+  timeTotal: 6 mins
