add sha for commit https://github.com/aspiers/stow/commit/4ef5eca4a9d107b24e712bb4c2c91f47e7e0fb85 from Apr 15, 2021... yay for stable projects that don't publish tags anymore :eyeroll:
Change-Id: Ia23c5e100c33e4d83bff96b3a30d56cfba8c1f74
Signed-off-by: nickboldt <nickboldt@gmail.com>

--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -592,6 +592,11 @@
       "3.11": "0.11.0",
       "3.x": "0.11.0"
     },
+    "stow": {
+      "3.10": "4ef5eca4a9d107b24e712bb4c2c91f47e7e0fb85",
+      "3.11": "4ef5eca4a9d107b24e712bb4c2c91f47e7e0fb85",
+      "3.x": "4ef5eca4a9d107b24e712bb4c2c91f47e7e0fb85"
+    },
     "DEV_WORKSPACE_OPERATOR_TAG": {
       "3.9": "0.21",
       "3.10": "0.21",
