--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -4849,3 +4849,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-code-rhel8
+  tag: 3.11-31
+  taskId: 57124728
+  timeCreate: Tue Nov 21 22:42:31 2023
+  timeStart: Tue Nov 21 22:45:26 2023
+  timeFinish: Tue Nov 21 22:53:28 2023
+  timeWait: 2 mins
+  timeBuild: 8 mins
+  timeTotal: 10 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-85
+  taskId: 57124910
+  timeCreate: Tue Nov 21 23:01:49 2023
+  timeStart: Tue Nov 21 23:02:01 2023
+  timeFinish: Tue Nov 21 23:05:58 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
