--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -4111,3 +4111,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.10-89
+  taskId: 57130176
+  timeCreate: Wed Nov 22 09:46:14 2023
+  timeStart: Wed Nov 22 09:58:05 2023
+  timeFinish: Wed Nov 22 10:05:49 2023
+  timeWait: 11 mins
+  timeBuild: 7 mins
+  timeTotal: 19 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-214
+  taskId: 57131492
+  timeCreate: Wed Nov 22 10:33:02 2023
+  timeStart: Wed Nov 22 10:33:15 2023
+  timeFinish: Wed Nov 22 10:36:59 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
