chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -4129,3 +4129,12 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-215
+  taskId: 57135808
+  timeCreate: Wed Nov 22 12:54:23 2023
+  timeStart: Wed Nov 22 12:57:32 2023
+  timeFinish: Wed Nov 22 13:02:48 2023
+  timeWait: 3 mins
+  timeBuild: 5 mins
+  timeTotal: 8 mins
