--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -4939,3 +4939,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.11-18
+  taskId: 57148655
+  timeCreate: Wed Nov 22 17:24:45 2023
+  timeStart: Wed Nov 22 17:25:14 2023
+  timeFinish: Wed Nov 22 17:33:21 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-90
+  taskId: 57148817
+  timeCreate: Wed Nov 22 17:40:58 2023
+  timeStart: Wed Nov 22 17:40:59 2023
+  timeFinish: Wed Nov 22 17:44:46 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
