--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -4993,3 +4993,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.11-36
+  taskId: 57174700
+  timeCreate: Thu Nov 23 14:14:21 2023
+  timeStart: Thu Nov 23 14:14:24 2023
+  timeFinish: Thu Nov 23 14:22:57 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-93
+  taskId: 57175314
+  timeCreate: Thu Nov 23 14:45:21 2023
+  timeStart: Thu Nov 23 14:46:01 2023
+  timeFinish: Thu Nov 23 14:49:24 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
