chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -5056,3 +5056,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.11-38
+  taskId: 57180855
+  timeCreate: Fri Nov 24 01:34:21 2023
+  timeStart: Fri Nov 24 01:34:54 2023
+  timeFinish: Fri Nov 24 01:42:03 2023
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 7 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-96
+  taskId: 57181104
+  timeCreate: Fri Nov 24 02:04:22 2023
+  timeStart: Fri Nov 24 02:04:39 2023
+  timeFinish: Fri Nov 24 02:08:19 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
