--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -1276,3 +1276,12 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-operator-bundle
+  tag: 3.9-340
+  taskId: 57198533
+  timeCreate: Sat Nov 25 20:20:34 2023
+  timeStart: Sat Nov 25 20:20:43 2023
+  timeFinish: Sat Nov 25 20:23:50 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
