--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -5146,3 +5146,66 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-configbump-rhel8
+  tag: 3.11-7
+  taskId: 57200164
+  timeCreate: Sun Nov 26 08:52:34 2023
+  timeStart: Sun Nov 26 08:52:38 2023
+  timeFinish: Sun Nov 26 09:04:52 2023
+  timeWait: 0 mins
+  timeBuild: 12 mins
+  timeTotal: 12 mins
+- name: devspaces-operator
+  tag: 3.11-13
+  taskId: 57200173
+  timeCreate: Sun Nov 26 08:54:15 2023
+  timeStart: Sun Nov 26 08:54:57 2023
+  timeFinish: Sun Nov 26 09:10:56 2023
+  timeWait: 0 mins
+  timeBuild: 15 mins
+  timeTotal: 16 mins
+- name: devspaces-server-rhel8
+  tag: 3.11-16
+  taskId: 57200176
+  timeCreate: Sun Nov 26 08:55:13 2023
+  timeStart: Sun Nov 26 08:55:44 2023
+  timeFinish: Sun Nov 26 09:03:16 2023
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 8 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.11-10
+  taskId: 57200177
+  timeCreate: Sun Nov 26 08:55:14 2023
+  timeStart: Sun Nov 26 08:55:45 2023
+  timeFinish: Sun Nov 26 09:01:14 2023
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 6 mins
+- name: devspaces-imagepuller-rhel8
+  tag: 3.11-6
+  taskId: 57200178
+  timeCreate: Sun Nov 26 08:56:34 2023
+  timeStart: Sun Nov 26 08:57:17 2023
+  timeFinish: Sun Nov 26 09:07:18 2023
+  timeWait: 0 mins
+  timeBuild: 10 mins
+  timeTotal: 10 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.11-31
+  taskId: 57200210
+  timeCreate: Sun Nov 26 09:06:34 2023
+  timeStart: Sun Nov 26 09:07:12 2023
+  timeFinish: Sun Nov 26 09:27:36 2023
+  timeWait: 0 mins
+  timeBuild: 20 mins
+  timeTotal: 21 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-101
+  taskId: 57200268
+  timeCreate: Sun Nov 26 09:23:21 2023
+  timeStart: Sun Nov 26 09:24:02 2023
+  timeFinish: Sun Nov 26 09:27:30 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
