chore: update description of java based samples
Signed-off-by: Valeriy Svydenko <vsvydenk@redhat.com>

--- a/dependencies/che-devfile-registry/devfiles/java11-maven-lombok__lombok-project-sample/meta.yaml
+++ b/dependencies/che-devfile-registry/devfiles/java11-maven-lombok__lombok-project-sample/meta.yaml
@@ -1,6 +1,6 @@
 ---
-displayName: Java 11 with Lombok
-description: Java stack with OpenJDK 11, Maven 3.6 and Lombok 1.18
+displayName: Java Lombok
+description: Java Stack with Project Lombok
 tags: ["Java", "OpenJDK", "Maven", "Lombok", "UBI8"]
 icon: /images/type-lombok.svg
 links:
