--- a/dependencies/che-devfile-registry/devfiles/java11-maven-quarkus__quarkus-quickstarts/meta.yaml
+++ b/dependencies/che-devfile-registry/devfiles/java11-maven-quarkus__quarkus-quickstarts/meta.yaml
@@ -1,6 +1,6 @@
 ---
-displayName: Java 11 with Quarkus
-description: Java stack with OpenJDK 11, Maven 3.6 and Quarkus Tools
+displayName: Quarkus REST API
+description: Quarkus stack with a default REST endpoint application sample
 tags: ["Java", "OpenJDK", "Maven", "Quarkus", "UBI8"]
 icon: /images/type-quarkus.svg
 links:
